[package]
name = "bastion-cluster"
version = "0.1.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bastion = { git = "https://github.com/bastion-rs/bastion.git", features = ["distributed"] }
bastion-executor = { git = "https://github.com/bastion-rs/bastion.git" }
lightproc = { git = "https://github.com/bastion-rs/bastion.git" }
uuid = { version = "0.8", features = ["v4"] }
futures-timer = "3.0.2"
env_logger = "0.7"
rand = "0.7.3"
artillery-core = "0.1.0"
lazy_static = "1.4"
