[package]
name = "request-logger-with-async-std"
version = "0.1.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bastion = "0.3"
async-std = "1.0"
env_logger = "0.7"
