[package]
name = "page_fetcher"
version = "0.1.0"
authors = ["Mahmut Bulut <vertexclique@gmail.com>"]
edition = "2018"

[dependencies]
bastion = "0.3.4"
fort = "0.3"
lambda_runtime = "0.2.1"
log = "0.4.8"
surf = "1.0.3"
futures = "0.3.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = "1.0.44"
simple_logger = "1.3.0"
